--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "firebase": "^9.6.1",
     "vue": "^3.0.0",
+    "vue-nav-ui": "^1.0.5",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
